--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <meta property="og:image" content="/logo.svg" />
         <meta
             property="og:url"
-            content="https://card.singlebit.xyz/naman-barkiya/"
+            content="https://card.namanbarkiya.xyz/"
         />
         <!-- Replace with the actual URL of your business card page -->
         <meta property="og:type" content="website" />
@@ -42,7 +42,7 @@
         <meta name="twitter:image" content="/logo.svg" />
         <meta
             name="twitter:url"
-            content="https://card.singlebit.xyz/naman-barkiya/"
+            content="https://card.namanbarkiya.xyz/"
         />
         <!-- Replace with the actual URL of your business card page -->
     </head>
